[package]
name = "powerset-enum-attr"
description = "A reexport dependency for the powerset-enum crate"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/rust-powerset-enum"

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.34", features = ["full", "extra-traits"]}
quote = "0.6.12"
proc-macro2 = "0.4.30"
