[package]
name = "powerset-enum-examples"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/rust-powerset-enum"

[dependencies]
powerset-enum = { path = "../powerset-enum" }
serde = "1.0.91"
serde_json = "1.0.39"
tempfile = "3.0.7"
serde_derive = "1.0.91"
err-derive = "0.1.5"
regex = "1.1.6"
