[package]
name = "powerset-enum"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/rust-powerset-enum"

[dependencies]
powerset-enum-traits = { version = "0.1.0", path = "../powerset-enum-traits" }
powerset-enum-attr = { version = "0.1.0", path = "../powerset-enum-attr" }
