[package]
name = "powerset-enum"
description = "A poor man's anonymous enum"
readme = "../README.md"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/rust-powerset-enum"
keywords = ["powerset", "anonymous-enums", "error-handling"]
categories = ["rust-patterns"]

[dependencies]
powerset-enum-traits = { version = "0.1.0", path = "../powerset-enum-traits" }
powerset-enum-attr = { version = "0.1.0", path = "../powerset-enum-attr" }

[dev-dependencies]
serde = "1.0.91"
serde_json = "1.0.39"
tempfile = "3.0.7"
serde_derive = "1.0.91"
regex = "1.1.6"
